# RXOMS

./: .gitignore  .pre-commit-config.yaml  README.md  generateTraffic.py  pyproject.toml  soarUtils.py  start_RXOMS.sh  stop_RXOMS.sh  topo.yml
configuration/: collector.json  ip_config.yml  portConfig.yml  qoaConfig.json  qoaConfig.yaml  readme.md  switch_config.yml
configuration/mltool/: flow.yaml  train.yaml
configuration/network/: ip_config.yaml  portConfig.yaml
configuration/qoa/: collector.yaml  controller.yaml
configuration/service/: data_enrichment.yaml  db_credential.yaml  incident_analysis.yaml  incident_validation.yaml  plan_enforcement.yaml  simulated_kg.yaml  test_kg_api.yaml
configuration/simulation/: config.yaml
controller/: restCommand.py  ryuRestFirewall.py  simplecontroller.py
data/: readme.md
data/anomaly_data/: all_flow.csv
data/graph/: graph.json  graph.yml
data/metadata/: componentData.json  cti.json  detectorData.json  incidentMetadata.json  mitigationMetadata.json
data/sdn_simulation/: raw_message.csv
data/template/: api.json  cti.json  detectorData.json  plan.json  protectorData.json
data/textData/: M1022.txt  M1029.txt  M1030.txt  M1037.txt  M1041.txt  T1498.001.txt  T1498.002.txt  T1498.txt  T1565.001.txt  T1565.002.txt  T1565.003.txt  T1565.txt  mitre_data.csv
data_processing/: data_processing.py
digitalTwin/: mininetNetworkTrafficGenerator.py
docs/: SOAR_Automation_KG.md
experiment/data_processing/: data_processing.py
experiment/template/: network_report.json
experiment/test/: mininetReportSimulator.py  test.ipynb
observation/test/: collector.py
ontology/: rdf_triples.xlsx  rxoms.owl  soarml.owl
prototype/: readme.md
sdn_simulation/: README.md
sdn_simulation/collector/: collector.py
sdn_simulation/controller/: ryuRestFirewall.py  (+1 more)
services/: collector.py  data_enrichment.py  incident_analysis.py  incident_validation.py  plan_enforcement.py  simulated_KG.py  start_external_service.sh
slide/: Sintef_presentation.pptx
template/: network_report.json
test/: mininetReportSimulator.py
topology/: factoryTopo.py
utils/: mininetUtils.py  soarUtils.py
(+367 files in other folders)
